Rebranding as Morevna Edition (#1 me)
Reviewed-on: https://tvoygit.ru/morevnaproject/synfig/pulls/1
Co-authored-by: Konstantin Dmitriev <ksee.zelgadis@gmail.com>
Co-committed-by: Konstantin Dmitriev <ksee.zelgadis@gmail.com>

--- a/synfig-studio/images/Makefile.am
+++ b/synfig-studio/images/Makefile.am
@@ -7,7 +7,7 @@ EXT = @imageext@
 EXTRA_DIST = \
 	installer_logo.sif \
 	installer_logo_osx.sif \
-	splash_screen.sif \
+	splash_screen_morevna.sif \
 	splash_screen-1.2.x.sif \
 	splash_screen-1.0.1.sif \
 	splash_screen-1.0.2.sif \
@@ -646,7 +646,7 @@ splash_screen.$(EXT): splash_screen_development.sif
 	echo "  File \"images\\$@\"" >>./images.nsh
 	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh
 else
-splash_screen.$(EXT): $(srcdir)/splash_screen.sif
+splash_screen.$(EXT): $(srcdir)/splash_screen_morevna.sif
 	$(SYNFIG) --quiet $< -o $@ --time 0f
 	echo "  File \"images\\$@\"" >>./images.nsh
 	echo "  Delete \"\$$INSTDIR\\share\\pixmaps\\$@\"" >>./unimages.nsh
